add index,show, and delete functions to products
