# app/Http/Controllers/ProductController.php
@@ -5,13 +5,89 @@ namespace App\Http\Controllers;
 use App\Exceptions\NotFoundException;
 use App\Requests\CreateProductRequest;
 use App\Requests\UpdateProductRequest;
+use App\Resources\ProductCollection;
 use App\Resources\ProductResource;
 use App\Services\ProductService;
 use Exception;
 use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
 
 class ProductController extends Controller
 {
+
+    /**
+     * @OA\Get(
+     *  path="/api/products",
+     *  tags={"Products"},
+     *  summary="Get Products List",
+     *  security={{ "apiAuth": {} }},
+     *  @OA\Response(
+     *       response="200",
+     *       description="success",
+     *       @OA\JsonContent()
+     *   ),
+     *   @OA\Response(
+     *       response="400",
+     *       description="bad request",
+     *       @OA\JsonContent()
+     *   ),
+     * )
+     *
+     * Get Product List
+     *
+     * @param ProductService $productService
+     * @return JsonResponse|AnonymousResourceCollection
+     */
+    public function index(ProductService $productService): JsonResponse|AnonymousResourceCollection
+    {
+        try {
+            $productList = $productService->getAll();
+            return ProductCollection::collection($productList);
+        } catch (Exception $exception) {
+            return $this->error($exception);
+        }
+    }
+
+    /**
+     * @OA\Get(
+     *  path="/api/products/{id}",
+     *  tags={"Products"},
+     *  summary="Get Products List",
+     *  security={{ "apiAuth": {} }},
+     *  @OA\Parameter(
+     *       name="id",
+     *       in="path",
+     *       description="id",
+     *       example="",
+     *       required=true,
+     *   ),
+     *  @OA\Response(
+     *       response="200",
+     *       description="success",
+     *       @OA\JsonContent()
+     *   ),
+     *   @OA\Response(
+     *       response="400",
+     *       description="bad request",
+     *       @OA\JsonContent()
+     *   ),
+     * )
+     *
+     * Get Product List
+     *
+     * @param int $id
+     * @param ProductService $productService
+     * @return JsonResponse|ProductResource
+     */
+    public function show(int $id, ProductService $productService): ProductResource|JsonResponse
+    {
+        try {
+            $product = $productService->getById($id);
+            return ProductResource::make($product);
+        } catch (Exception $exception) {
+            return $this->error($exception);
+        }
+    }
 
     /**
      * @OA\Post(
@@ -117,6 +193,47 @@ class ProductController extends Controller
             return new ProductResource($product);
         }catch (NotFoundException $exception) {
             return $this->notFound(exception: $exception);
+        } catch (Exception $exception) {
+            return $this->error($exception);
+        }
+    }
+
+    /**
+     * @OA\Delete(
+     *  path="/api/products/delete/{id}",
+     *  tags={"Products"},
+     *  summary="Delete Product",
+     *  security={{ "apiAuth": {} }},
+     *  @OA\Parameter(
+     *       name="id",
+     *       in="path",
+     *       description="id",
+     *       example="",
+     *       required=true,
+     *   ),
+     *  @OA\Response(
+     *       response="200",
+     *       description="success",
+     *       @OA\JsonContent()
+     *   ),
+     *   @OA\Response(
+     *       response="400",
+     *       description="bad request",
+     *       @OA\JsonContent()
+     *   ),
+     * )
+     *
+     * Delete Product
+     *
+     * @param int $id
+     * @param ProductService $productService
+     * @return JsonResponse|ProductResource
+     */
+    public function destroy(int $id, ProductService $productService): ProductResource|JsonResponse
+    {
+        try {
+            $productService->destroy($id);
+            return $this->success('Product successfully deleted');
         } catch (Exception $exception) {
             return $this->error($exception);
         }
